--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 inventory = ANSIBLE
 host_key_checking= False
-private_key_file= C:/project5/chan.pem
-remote_user=ec2-user
+private_key_file= C:/project5/Malar.pem
+remote_user=ubuntu
 [privilege_escalation]
 become=true
 become_method=sudo
